# bench-javascript-parser-written-in-rust

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  memory.sh  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  table.mjs
.github/: renovate.json
.github/workflows/: benchmark.yml
benches/: parser.rs
src/: biome.rs  lib.rs  oxc.rs  swc.rs
