[package]
name = "bench-parser"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "parser"
harness = false

[[bin]]
name = "oxc"
path = "src/oxc.rs"

[[bin]]
name = "swc"
path = "src/swc.rs"

[[bin]]
name = "biome"
path = "src/biome.rs"

[dependencies]
oxc = "0.14.0"

swc_ecma_parser = { version = "0.146.0", features = ["typescript"] }
swc_ecma_ast = "0.115.0"

biome_js_parser = "0.5.7"
biome_js_syntax = "0.5.7"

num_cpus = "1.16.0"
criterion2  = { version = "0.10.0", default-features = false }
rayon = "1.10.0"
mimalloc = "0.1.42"

[features]
codspeed = ["criterion2/codspeed"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
