[package]
name = "bench-parser"
version = "0.1.0"
edition = "2021"
publish = false

[[bench]]
name = "parser"
harness = false

[[bin]]
name = "oxc"
path = "src/oxc.rs"
test    = false
doctest = false

[[bin]]
name = "swc"
path = "src/swc.rs"
test    = false
doctest = false

# [[bin]]
# name = "biome"
# path = "src/biome.rs"
# test    = false
# doctest = false

[dependencies]
oxc = "0.108.0"

swc_ecma_parser = { version = "33.0.0", features = ["typescript"] }
swc_ecma_ast = "20.0.0"
swc_common = "18.0.1"

# biome_js_parser = "0.5.6"
# biome_js_syntax = "0.5.6"

num_cpus = "1.16.0"
criterion2  = { version = "3.0.0", default-features = false }
rayon = "1.10.0"
mimalloc= { package = "mimalloc-safe", version = "0.1.52" }

[features]
codspeed = ["criterion2/codspeed"]

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
debug         = false
panic         = "abort"
